[tool.poetry]
name = "streamlit_react_jsonschema"
version = "0.1.1"
description = "streamlit component for GhostOS, render form from JSONSchema by react-jsonschema-component"
authors = ["ZhuMing <thirdgerb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2"
streamlit = "^1.39.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
